--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,10 @@
 	"image": "espdev:latest",
 	"privileged": true,
 	"runArgs": [ "--network=host", "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+	"mounts": [
+		"source=/dev/bus/usb,target=/dev/bus/usb,type=bind",
+		"source=/dev/ttyACM0,target=/dev/ttyACM0,type=bind"
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": [
