--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,10 @@
 {
 	"name": "espdev-container",
-	"image": "espdev:latest",
+	"image": "esp-dev:latest",
 	"privileged": true,
 	"runArgs": [ "--network=host", "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 	"mounts": [
-		"source=/dev/bus/usb,target=/dev/bus/usb,type=bind",
-		"source=/dev/ttyACM0,target=/dev/ttyACM0,type=bind"
+		"source=/dev,target=/dev,type=bind"
 	],
 	"customizations": {
 		"vscode": {
