--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
-project(esp_server C CXX)
+project(esp_server)
 
 include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
-
 idf_build_process(esp32s2)
-
-add_executable(esp_server_app ${CMAKE_CURRENT_LIST_DIR}/src/esp_server.cpp)
-target_link_libraries(esp_server_app PRIVATE idf::newlib)
-
-idf_build_executable(esp_server_app)
+idf_component_register(SRCS ${CMAKE_CURRENT_LIST_DIR}/src/esp_server.c INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include)
