--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "esp-server.cpp"
-                    INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS ${CMAKE_CURRENT_LIST_DIR}/src/esp-server.cpp
+    REQUIRES cnc_server
+)
