--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
 
+set(TARGET "esp32s2")
+set(CMAKE_TOOLCHAIN_FILE $ENV{IDF_PATH}/tools/cmake/toolchain-${TARGET}.cmake)
 project(esp-server C CXX)
 
-set(TARGET "esp32s2")
-
 include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
+
 idf_build_process(
-    "${TARGET}"
+    ${TARGET}
     COMPONENTS freertos esptool_py
     SDKCONFIG ${CMAKE_CURRENT_LIST_DIR}/sdkconfig
     BUILD_DIR ${CMAKE_BINARY_DIR}
