--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 				"twxs.cmake",
 				"ms-vscode.cmake-tools",
 				"josetr.cmake-language-support-vscode",
-				"espressif.esp-idf-extension"
+				"espressif.esp-idf-extension",
+				"zxh404.vscode-proto3"
 			]
 		}
 	},
