--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,6 @@
 			]
 		}
 	},
-	"workspaceMount": "source=${localWorkspaceFolder},target=/usr/app/src,type=bind",
+	"workspaceMount": "source=${localWorkspaceFolder},target=/project,type=bind",
 	"workspaceFolder": "/usr/app/src"
 }
