--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,5 +21,5 @@
 		}
 	},
 	"workspaceMount": "source=${localWorkspaceFolder},target=/project,type=bind",
-	"workspaceFolder": "/usr/app/src"
+	"workspaceFolder": "/project"
 }
