--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,16 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.20)
 
 set(TARGET "esp32s2")
-set(CMAKE_TOOLCHAIN_FILE $ENV{IDF_PATH}/tools/cmake/toolchain-${TARGET}.cmake)
-project(esp-server C CXX)
+set(CMAKE_TOOLCHAIN_FILE "$ENV{IDF_PATH}/tools/cmake/toolchain-${TARGET}.cmake")
 
+project(esp_mcu_server C CXX ASM)
+
+# Include for ESP-IDF build system functions
 include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
 
+# Create idf::{target} and idf::freertos static libraries
 idf_build_process(
-    ${TARGET}
+    "esp32s2"
     COMPONENTS freertos esptool_py
     SDKCONFIG ${CMAKE_CURRENT_LIST_DIR}/sdkconfig
     BUILD_DIR ${CMAKE_BINARY_DIR}
@@ -15,8 +18,8 @@ idf_build_process(
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(esp-server.elf ${CMAKE_CURRENT_LIST_DIR}/src/esp-server.cpp)
-target_link_libraries(esp-server.elf idf::freertos idf::spi_flash cnc_server test_ipc_connection)
-idf_build_executable(esp-server.elf)
+set(elf_file ${CMAKE_PROJECT_NAME}.elf)
+add_executable(${elf_file} ${CMAKE_CURRENT_LIST_DIR}/src/esp-server.cpp)
 
-add_subdirectory($ENV{MCU_SERVER_PATH} ${CMAKE_BINARY_DIR}/mcu_server)
+target_link_libraries(${elf_file} idf::freertos idf::spi_flash)
+idf_build_executable(${elf_file})
