--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,11 @@
 				"josetr.cmake-language-support-vscode",
 				"espressif.esp-idf-extension",
 				"zxh404.vscode-proto3"
-			]
+			],
+			"settings": {
+    			"idf.adapterTargetName": "esp32s2",
+    			"idf.port": "/dev/ttyACM0"
+			}
 		}
 	},
 	"workspaceMount": "source=${localWorkspaceFolder},target=/project,type=bind",
