--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,11 @@ set(CMAKE_TOOLCHAIN_FILE "$ENV{IDF_PATH}/tools/cmake/toolchain-${TARGET}.cmake")
 
 project(esp_mcu_server C CXX ASM)
 
-# Include for ESP-IDF build system functions
 include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
 
 idf_build_set_property(MINIMAL_BUILD ON)
-# Create idf::{target} and idf::freertos static libraries
 idf_build_process(
-    "esp32s2"
+    ${TARGET}
     COMPONENTS freertos esp-tls nvs_flash esp_netif esp_http_server esp_wifi esp_eth
     SDKCONFIG ${CMAKE_CURRENT_LIST_DIR}/sdkconfig
     BUILD_DIR ${CMAKE_BINARY_DIR}
