--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,11 +40,22 @@ target_link_libraries(
     idf::esp_wifi
 )
 
+add_library(wifi_station_guard INTERFACE)
+target_include_directories(wifi_station_guard INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
+target_link_libraries(
+    wifi_station_guard
+    INTERFACE
+    idf::nvs_flash
+    idf::esp_netif
+    idf::esp_wifi
+)
+
 add_library(http_server INTERFACE)
 target_include_directories(http_server INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
 target_link_libraries(
     http_server
     INTERFACE
     wifi_access_point_guard
+    wifi_station_guard
     idf::esp_http_server
 )
