wifi_station_guard added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,14 @@ idf_build_process(
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+if(NOT DEFINED NETWORK_SSID)
+    message(FATAL_ERROR "NETWORK_SSID is not defined. Please pass it to the cmake command")
+endif()
+
+if(NOT DEFINED NETWORK_PASSWORD)
+    message(FATAL_ERROR "NETWORK_PASSWORD is not defined. Please pass it to the cmake command")
+endif()
+
 add_executable(${CMAKE_PROJECT_NAME}.elf ${CMAKE_CURRENT_LIST_DIR}/src/esp-server.cpp)
 target_link_libraries(
     ${CMAKE_PROJECT_NAME}.elf
@@ -29,6 +37,12 @@ target_link_libraries(
     idf::esp_driver_gpio
 )
 idf_build_executable(${CMAKE_PROJECT_NAME}.elf)
+target_compile_definitions(
+    ${CMAKE_PROJECT_NAME}.elf
+    PRIVATE
+    NETWORK_SSID=\"${NETWORK_SSID}\"
+    NETWORK_PASSWORD=\"${NETWORK_PASSWORD}\"
+)
 
 add_library(wifi_access_point_guard INTERFACE)
 target_include_directories(wifi_access_point_guard INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
