--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,14 @@ idf_build_process(
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+if(NOT DEFINED NETWORK_SSID)
+    message(FATAL_ERROR "NETWORK_SSID is not defined. Please pass it to the cmake command")
+endif()
+
+if(NOT DEFINED NETWORK_PASSWORD)
+    message(FATAL_ERROR "NETWORK_PASSWORD is not defined. Please pass it to the cmake command")
+endif()
+
 add_executable(${CMAKE_PROJECT_NAME}.elf ${CMAKE_CURRENT_LIST_DIR}/src/esp-server.cpp)
 target_link_libraries(
     ${CMAKE_PROJECT_NAME}.elf
@@ -29,11 +37,27 @@ target_link_libraries(
     idf::esp_driver_gpio
 )
 idf_build_executable(${CMAKE_PROJECT_NAME}.elf)
+target_compile_definitions(
+    ${CMAKE_PROJECT_NAME}.elf
+    PRIVATE
+    NETWORK_SSID=\"${NETWORK_SSID}\"
+    NETWORK_PASSWORD=\"${NETWORK_PASSWORD}\"
+)
 
 add_library(wifi_access_point_guard INTERFACE)
 target_include_directories(wifi_access_point_guard INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
 target_link_libraries(
     wifi_access_point_guard
+    INTERFACE
+    idf::nvs_flash
+    idf::esp_netif
+    idf::esp_wifi
+)
+
+add_library(wifi_station_guard INTERFACE)
+target_include_directories(wifi_station_guard INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
+target_link_libraries(
+    wifi_station_guard
     INTERFACE
     idf::nvs_flash
     idf::esp_netif
@@ -46,5 +70,6 @@ target_link_libraries(
     http_server
     INTERFACE
     wifi_access_point_guard
+    wifi_station_guard
     idf::esp_http_server
 )
