--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,12 +15,9 @@
 				"twxs.cmake",
 				"ms-vscode.cmake-tools",
 				"josetr.cmake-language-support-vscode",
-				"zxh404.vscode-proto3"
-			],
-			"settings": {
-    			"idf.adapterTargetName": "esp32s2",
-    			"idf.port": "/dev/ttyACM0"
-			}
+				"zxh404.vscode-proto3",
+				"Postman.postman-for-vscode"
+			]
 		}
 	},
 	"workspaceMount": "source=${localWorkspaceFolder},target=/project,type=bind",
