--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"ms-vscode.cmake-tools",
 				"josetr.cmake-language-support-vscode",
 				"zxh404.vscode-proto3",
-				"Postman.postman-for-vscode"
+				"Postman.postman-for-vscode",
+				"GitHub.vscode-github-actions"
 			]
 		}
 	},
