--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -10,13 +10,13 @@ add_library(pb_common INTERFACE)
 target_sources(pb_common INTERFACE $ENV{NANOPB_SRC_PATH}/pb_common.c)
 target_include_directories(pb_common INTERFACE $ENV{NANOPB_SRC_PATH}/include)
 
-set(MOVEMENT_VENDOR_API_PROTO_PATH ${CMAKE_CURRENT_LIST_DIR}/resourses)
-set(MOVEMENT_VENDOR_API_PROTO_NAME service_api.proto)
+set(SERVICE_API_PROTO_PATH ${CMAKE_CURRENT_LIST_DIR}/resourses)
+set(SERVICE_API_PROTO_NAME service_api.proto)
 set(GENERATED_PROTO_PATH ${CMAKE_BINARY_DIR}/proto_generated)
 add_custom_command(
 	OUTPUT ${GENERATED_PROTO_PATH}/service_api.pb.h ${GENERATED_PROTO_PATH}/service_api.pb.c
-	COMMAND mkdir -p ${GENERATED_PROTO_PATH} && $ENV{NANOPB_SRC_PATH}/generator/protoc -I ${MOVEMENT_VENDOR_API_PROTO_PATH} --nanopb_out=${GENERATED_PROTO_PATH} ${MOVEMENT_VENDOR_API_PROTO_NAME}
-	DEPENDS ${MOVEMENT_VENDOR_API_PROTO_PATH}/${MOVEMENT_VENDOR_API_PROTO_NAME}
+	COMMAND mkdir -p ${GENERATED_PROTO_PATH} && $ENV{NANOPB_SRC_PATH}/generator/protoc -I ${SERVICE_API_PROTO_PATH} --nanopb_out=${GENERATED_PROTO_PATH} ${SERVICE_API_PROTO_NAME}
+	DEPENDS ${SERVICE_API_PROTO_PATH}/${SERVICE_API_PROTO_NAME}
 )
 
 add_custom_target(
