--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,10 @@
 				"zxh404.vscode-proto3",
 				"Postman.postman-for-vscode",
 				"GitHub.vscode-github-actions"
-			]
+			],
+			"settings": {
+				"workbench.colorTheme": "Monokai"
+			}
 		}
 	},
 	"workspaceMount": "source=${localWorkspaceFolder},target=/project,type=bind",
