--- a/proto/tests/CMakeLists.txt
+++ b/proto/tests/CMakeLists.txt
@@ -1,15 +1,14 @@
 add_executable(
-	movement_proto_tests
+	thermostat_proto_tests
 	${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/ut_api_request_parser.cpp
 )
 
 target_link_libraries(
-	movement_proto_tests
+	thermostat_proto_tests
 	PRIVATE
     api_request_parser
-	linear_movement_request
-	pb_encode
 	
+	pb_encode
 	gtest
 )
