--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ include($ENV{IDF_PATH}/tools/cmake/idf.cmake)
 idf_build_set_property(MINIMAL_BUILD ON)
 idf_build_process(
     ${TARGET}
-    COMPONENTS freertos esp-tls nvs_flash esp_netif esp_http_server esp_wifi esp_eth
+    COMPONENTS freertos esp-tls nvs_flash esp_netif esp_http_server esp_wifi esp_eth esp_adc
     SDKCONFIG ${CMAKE_CURRENT_LIST_DIR}/sdkconfig
     BUILD_DIR ${CMAKE_BINARY_DIR}
 )
@@ -123,7 +123,7 @@ target_link_libraries(
     pt100_sensor_controller
     INTERFACE
     idf::esp_driver_gpio
-    temperature_sensor_controller
+    idf::esp_adc
 )
 
 add_library(gpio_relay_controller INTERFACE)
